--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "polars>=1.36.1",
     "pyarrow>=22.0.0",
     "pymc>=5.25.1",
+    "pytensor>=2.31.7",
     "quadrosdesaude>=0.1.6",
     "splot>=1.1.7",
     "statsmodels>=0.14.6",
